[package]
name = "hyperbutt-rs"
version = "0.1.0"
authors = ["a <b@c>"]
edition = "2018"

[dependencies]
multiboot2 = "*"
volatile = "*"
memory = { path = "../libs/memory" }

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[features]
boot-multiboot = []
boot-uefi = []

[profile.release]
panic = "abort"
debug = false

[profile.dev]
panic = "abort"
