[package]
name = "hyperbutt-rs"
version = "0.1.0"
authors = ["a <b@c>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
multiboot2 = "*"
memory = { path = "../libs/memory" }
graphics = { path = "../libs/graphics" }

[features]
boot-multiboot = []
boot-uefi = []

[profile.release]
panic = "abort"
debug = false

[profile.dev]
panic = "abort"
